--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.muumlover.antforestx">
+        package="com.muumlover.antforestx">
 
     <application
             android:allowBackup="true"
@@ -11,22 +11,25 @@
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".AntService"
-                 android:enabled="true"
-                 android:exported="true"
-                 android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+
+        <service
+                android:name=".AntForestService"
+                android:enabled="true"
+                android:exported="true"
+                android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService"/>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
             <meta-data
                     android:name="android.accessibilityservice"
-                    android:resource="@xml/ant_service"/>
+                    android:resource="@xml/ant_service" />
         </service>
+        <service android:name=".CaptureService" />
     </application>
 
 </manifest>
